更新 sm_block.css

--- a/statics/css/sm_block.css
+++ b/statics/css/sm_block.css
@@ -510,4 +510,4 @@ textarea.form-control{ height: auto;}
 	.stui-vodlist__media li .thumb .w-thumb{ width: 100px;}
 	.stui-vodlist__media li .thumb .f-thumb{ width: 50px;}
 }
-.zbgg{margin: 2%}.zbgg img{height:100px;}.zbggg{margin:2%;overflow:hidden;margin-bottom:-15px;}.playgg{border: 1px #ddd solid; margin: 2%;text-align: center; display: block;line-height: 2rem; font-size: 0.8rem; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;background-color: #00a0e9; color: #ffffff;height:2.2rem;}
+#mg2{margin:2%}#mg2 img{height:100px;}.zbggg{margin:2%;overflow:hidden;margin-bottom:-15px;}.playgg{border: 1px #ddd solid; margin: 2%;text-align: center; display: block;line-height: 2rem; font-size: 0.8rem; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;background-color: #00a0e9; color: #ffffff;height:2.2rem;}
